# tetra-nerf

./: CMakeLists.txt  Dockerfile  README.md  setup.py
.github/workflows/: deploy.yml
cmake/: .gitignore  FindOptiX.cmake  FindTorch.cmake
cmake/FindCUDA/: make2cmake.cmake  parse_cubin.cmake  run_nvcc.cmake
docs/: demo.html  index.html  style.css  video.html  viewer.css  viewer.js  worker.js
src/: optix_traversal.cu  optix_types.h  py_binding.cpp  tetrahedra_tracer.cpp  tetrahedra_tracer.cu  tetrahedra_tracer.h  triangulation.cpp  triangulation.h
src/optix/: optix_find_tetrahedra.cu  optix_trace_rays.cu  optix_trace_rays_triangles.cu
src/utils/: exception.h  preprocessor.h  tensor.h  vec_math.h
tests/: test_barycentrics.py  test_sort.py  test_tetrahedra_tracer.py  test_tetrahedra_tracer_triangles.py  test_triangulation.py  test_uint32.py
tests/assets/: bottle.ply
tetranerf/: __init__.py
tetranerf/nerfstudio/: model.py  pipeline.py  registration.py
tetranerf/scripts/: process_blender.py  process_images.py  process_mipnerf360.py  process_tanksandtemples.py  triangulate.py  utils.py
tetranerf/utils/: colmap_utils.py
tetranerf/utils/extension/: __init__.py  __init__.pyi
